# Context-Dilution

./: .gitignore  CLAUDE.md  LICENSE  README.md  preliminary_findings.md  pyproject.toml  run.sh
config/: experiment.yaml
config/tasks/: creative_api_001.yaml  creative_arch_002.yaml  creative_cli_003.yaml  creative_testing_004.yaml  parallel_audit_001.yaml  parallel_ingest_004.yaml  parallel_refactor_002.yaml  parallel_transform_003.yaml  sequential_debug_001.yaml  sequential_nullcheck_003.yaml  sequential_reporting_004.yaml  sequential_trace_002.yaml
contexts/codebases/inventory_app/events/: notifications.py
contexts/codebases/inventory_app/models/: stock.py
contexts/codebases/inventory_app/services/: reporting.py  transaction.py
contexts/codebases/inventory_app/utils/: helpers.py
contexts/conversations/: inventory_session.json  pipeline_session.json
planning/: experiment-implementation-plan.md
scripts/: analyze_results.py  run_experiment.py  run_human_eval.py  run_single_task.py
src/: config.py  models.py  runner.py
src/agents/: client.py  multi.py  single.py
src/analysis/: report.py  statistics.py  visualization.py
src/context/: builder.py  conversation.py  partitioner.py  summarizer.py
src/evaluation/: automated.py  calibration.py  human_eval.py  llm_judge.py  metrics.py  rubric.py
src/tasks/: base.py  registry.py
tests/: conftest.py  test_client.py  test_config.py  test_context_builder.py  test_conversation.py  test_evaluation.py  test_human_eval.py  test_models.py  test_partitioner.py  test_statistics.py  test_summarizer.py  test_task_registry.py
(+5 files in other folders)
