[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "context-dilution"
version = "0.1.0"
description = "Empirical study of context dilution in multi-agent AI orchestration"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.39.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "pandas>=2.0",
    "numpy>=1.26",
    "scipy>=1.12",
    "scikit-posthocs>=0.9",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "click>=8.1",
    "python-dotenv>=1.0",
    "openai>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "mypy>=1.8",
    "ruff>=0.4",
    "pandas-stubs>=2.0",
    "types-PyYAML>=6.0",
    "types-seaborn>=0.13",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests requiring live API (deselect with '-m \"not integration\"')",
]

[tool.mypy]
strict = true
plugins = ["pydantic.mypy"]
exclude = ["results/"]

[[tool.mypy.overrides]]
module = ["scipy.*", "scikit_posthocs.*", "seaborn.*", "matplotlib.*"]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "RUF"]

[tool.ruff.format]
quote-style = "double"
